fixed blurred bg and image positions

--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -6,6 +6,18 @@
     height: 100%;
 }
 
+#background {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
+    background: urL("../img/bgBlur.png") rgb(231, 231, 231);
+    background-blend-mode: multiply;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 /* ---- START SCREEN ---- */
 #startScreen {
     height: 100%;
@@ -15,21 +27,6 @@
     justify-content: center;
     align-items: center;
     padding-top: 30px;
-}
-
-#background {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: -1;
-    background: urL("../img/bg.png") rgb(231, 231, 231);
-    background-blend-mode: multiply;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    filter: blur(5px);
-    -webkit-filter: blur(5px);
-    transform: scale(1.1); 
 }
 
 #startScreen h2 {
